--- a/.github/workflows/OpenWrt_ARMv8.yml
+++ b/.github/workflows/OpenWrt_ARMv8.yml
@@ -207,10 +207,7 @@ jobs:
         removeArtifacts: true
         token: ${{ secrets.GITHUB_TOKEN }}
         body: |
-          This is OpenWrt firmware for Armvirt 64
-          * Firmware information
-          * Selfuse是自用固件，插件根据个人需要删减.
-          * ARMv8是精简固件.
+          * ARMv8 精简固件.
           * Default IP: 192.168.1.1
           * Default username: root
           * Default password: password
