--- a/.github/workflows/OpenWrt_Selfuse.yml
+++ b/.github/workflows/OpenWrt_Selfuse.yml
@@ -23,9 +23,9 @@ env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: Selfuse/OpenWrt_Selfuse.config
-  DIY_P1_SH: Selfuse/diy-part1.sh
-  DIY_P2_SH: Selfuse/diy-Selfuse.sh
+  CONFIG_FILE: config/Selfuse/OpenWrt_Selfuse.config
+  DIY_P1_SH: config/Selfuse/diy-part1.sh
+  DIY_P2_SH: config/Selfuse/diy-Selfuse.sh
   UPLOAD_BIN_DIR: true
   UPLOAD_FIRMWARE: true
   UPLOAD_COWTRANSFER: false
