--- a/.github/workflows/Selfuse.yml
+++ b/.github/workflows/Selfuse.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #
 
-name: OpenWrt_ARMv8
+name: OpenWrt_Selfuse
 
 on:
   repository_dispatch:
@@ -23,9 +23,9 @@ env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: config/ARMv8/OpenWrt_ARMv8.config
-  DIY_P1_SH: config/ARMv8/diy-part1.sh
-  DIY_P2_SH: config/ARMv8/diy-ARMv8.sh
+  CONFIG_FILE: config/Selfuse/Selfuse.config
+  DIY_P1_SH: config/Selfuse/diy-part1.sh
+  DIY_P2_SH: config/Selfuse/diy-Selfuse.sh
   UPLOAD_BIN_DIR: true
   UPLOAD_FIRMWARE: true
   UPLOAD_COWTRANSFER: false
@@ -190,6 +190,11 @@ jobs:
         KERNEL_AUTO_LATEST:  true
         KERNEL_VERSION_NAME: 5.15.67_5.19.8
         WHOAMI: Yuan
+        ENABLE_WIFI_K504: 0
+        ENABLE_WIFI_K510: 0
+        SW_FLOWOFFLOAD: 0
+        HW_FLOWOFFLOAD: 0
+        SFE_FLOW: 0
 
     - name: copy update files
       run: |
@@ -200,29 +205,29 @@ jobs:
     - name: Upload OpenWrt Firmware to Release
       uses: ncipollo/release-action@v1
       with:
-        name: OpenWrt_ARMv8_${{ env.PRODUCT_NAME }}${{ env.DATE }}
-        tag: OpenWrt_ARMv8${{ env.FILE_NAME }}
+        name: OpenWrt_Selfuse ${{ env.PRODUCT_NAME }}${{ env.DATE }}
+        tag: OpenWrt_Selfuse${{ env.FILE_NAME }}
         artifacts: ${{ env.PACKAGED_OUTPUTPATH }}/*
         allowUpdates: true
         removeArtifacts: true
         token: ${{ secrets.GITHUB_TOKEN }}
         body: |
-          * ARMv8 精简固件.
-          * Default IP: 192.168.1.1
+          * Selfuse 用于测试
+          * Default IP: 192.168.1.11
           * Default username: root
           * Default password: password
 
     - name: Delete workflow runs
       uses: GitRML/delete-workflow-runs@main
       with:
-        token: ${{ secrets.GITHUB_TOKEN }}
-        repository: ${{ github.repository }}
         retain_days: 1
         keep_minimum_runs: 4
 
     - name: Remove old Releases
       uses: dev-drprasad/delete-older-releases@v0.2.0
       with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        repository: ${{ github.repository }}
         keep_latest: 6
         delete_tags: true
       env:
@@ -232,6 +237,6 @@ jobs:
       run: |
         MSG="
         编译时间：${{ env.DATE }}
-        ARMv8 编译完成
+        Selfuse 编译完成
         "
         curl "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage" -d "chat_id=${{ secrets.TELEGRAM_CHAT_ID }}&text=${MSG}"
