--- a/.github/workflows/x86_Docker.yml
+++ b/.github/workflows/x86_Docker.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #
 
-name: OpenWrt_Selfuse
+name: OpenWrt_x86
 
 on:
   repository_dispatch:
@@ -23,10 +23,10 @@ env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: config/Selfuse/OpenWrt_Selfuse.config
-  DIY_P1_SH: config/Selfuse/diy-part1.sh
-  DIY_P2_SH: config/Selfuse/diy-Selfuse.sh
-  UPLOAD_BIN_DIR: true
+  CONFIG_FILE: config/x86/x86_Docker.config
+  DIY_P1_SH: config/x86/diy-part1.sh
+  DIY_P2_SH: config/x86/diy-x86.sh
+  UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: true
   UPLOAD_COWTRANSFER: false
   UPLOAD_WETRANSFER: false
@@ -60,12 +60,6 @@ jobs:
         df -hT $PWD
         git clone $REPO_URL -b $REPO_BRANCH openwrt
         ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
-
-#    - name: Cache
-#      uses: klever1988/cachewrtbuild@test
-#      with:
-#        ccache: 'true'
-#        prefix: ${{ github.workspace }}/openwrt
 
     - name: Load custom feeds
       run: |
@@ -132,7 +126,7 @@ jobs:
       if: env.UPLOAD_FIRMWARE == 'true' && !cancelled()
       run: |
         cd openwrt/bin/targets/*/*
-        rm -rf packages
+        rm -rf packages config.buildinfo feeds.buildinfo sha256sums version.buildinfo *.manifest Packages.tar.gz
         echo "FIRMWARE=$PWD" >> $GITHUB_ENV
         echo "::set-output name=status::success"
 
@@ -171,63 +165,33 @@ jobs:
         [ $UPLOAD_WETRANSFER = true ] && echo "🔗 [WeTransfer](${{ steps.wetransfer.outputs.url }})" >> release.txt
         echo "::set-output name=status::success"
 
-    - name: Upload firmware to release
-      uses: softprops/action-gh-release@v1
-      if: steps.tag.outputs.status == 'success' && !cancelled()
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: ${{ steps.tag.outputs.release_tag }}
-        body_path: release.txt
-        files: ${{ env.FIRMWARE }}/*
-
-    - name: Package Armvirt as OpenWrt
-      uses: ophub/flippy-openwrt-actions@main
-      env:
-        OPENWRT_ARMVIRT: openwrt/bin/targets/*/*/*.tar.gz
-        KERNEL_REPO_URL: https://github.com/yunxi993/OpenWrt-ARMv8/tree/main/kernel
-        PACKAGE_SOC: vplus_beikeyun_l1pro_r66s_r68s_s905_s905d_s905x2_s905x3_s912_s922x_s922x-n2
-        KERNEL_AUTO_LATEST:  true
-        KERNEL_VERSION_NAME: 5.15.67_5.19.8
-        WHOAMI: Yuan
-        ENABLE_WIFI_K504: 0
-        ENABLE_WIFI_K510: 0
-        SW_FLOWOFFLOAD: 0
-        HW_FLOWOFFLOAD: 0
-        SFE_FLOW: 0
-
-    - name: copy update files
-      run: |
-        cd /opt/openwrt_packit
-        sudo cp ./files/update*.sh ./output/
-        echo "::set-output name=status::success"
-
     - name: Upload OpenWrt Firmware to Release
       uses: ncipollo/release-action@v1
       with:
-        name: OpenWrt_Selfuse_${{ env.PRODUCT_NAME }}${{ env.DATE }}
-        tag: OpenWrt_Selfuse${{ env.FILE_NAME }}
-        artifacts: ${{ env.PACKAGED_OUTPUTPATH }}/*
+        name: OpenWrt_x86_Docker ${{ env.PRODUCT_NAME }}${{ env.DATE }}
+        tag: OpenWrt_x86_Docker${{ env.FILE_NAME }}
+        artifacts: ${{ env.FIRMWARE }}/*
         allowUpdates: true
         removeArtifacts: true
         token: ${{ secrets.GITHUB_TOKEN }}
         body: |
-          * Selfuse 用于测试
-          * Default IP: 192.168.1.11
+          * x86 精简固件
+          * 有Docker
+          * Default IP: 192.168.1.1
           * Default username: root
           * Default password: password
 
     - name: Delete workflow runs
       uses: GitRML/delete-workflow-runs@main
       with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        repository: ${{ github.repository }}
         retain_days: 1
         keep_minimum_runs: 4
 
     - name: Remove old Releases
       uses: dev-drprasad/delete-older-releases@v0.2.0
       with:
-        token: ${{ secrets.GITHUB_TOKEN }}
-        repository: ${{ github.repository }}
         keep_latest: 6
         delete_tags: true
       env:
@@ -237,6 +201,6 @@ jobs:
       run: |
         MSG="
         编译时间：${{ env.DATE }}
-        Selfuse 编译完成
+        x86 编译完成
         "
         curl "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage" -d "chat_id=${{ secrets.TELEGRAM_CHAT_ID }}&text=${MSG}"
