--- a/.github/workflows/Selfuse.yml
+++ b/.github/workflows/Selfuse.yml
@@ -128,18 +128,20 @@ jobs:
         path: openwrt/bin
 
     - name: Upload Packags
-    - uses: actions/upload-artifact@main
+    - uses: actions/upload-artifact@v3
       with:
-        name: OpenWrt_IPK
-        run: |
+        name: Selfuse_IPK
         path: |
-          path/openwrt/bin/aarch64_cortex-a53/luci
-          path/openwrt/bin/aarch64_cortex-a53/base
+          openwrt/bin/packages/aarch64_cortex-a53/luci
+          openwrt/bin/packages/aarch64_cortex-a53/base
 
     - name: Organize files
       id: organize
       if: env.UPLOAD_FIRMWARE == 'true' && !cancelled()
       run: |
+        cd $GITHUB_WORKSPACE
+        tar -zcvf Selfuse_IPK.tar.gz openwrt/Selfuse_IPK
+        cp Selfuse_IPK.tar.gz openwrt/bin/targets/*/*
         cd openwrt/bin/targets/*/*
         rm -rf packages
         echo "FIRMWARE=$PWD" >> $GITHUB_ENV
@@ -217,7 +219,6 @@ jobs:
         name: OpenWrt_Selfuse ${{ env.PRODUCT_NAME }}${{ env.DATE }}
         tag: OpenWrt_Selfuse${{ env.FILE_NAME }}
         artifacts: ${{ env.PACKAGED_OUTPUTPATH }}/*
-        artifacts: ${{ env.OpenWrt_IPK }}/*
         allowUpdates: true
         removeArtifacts: true
         token: ${{ secrets.GITHUB_TOKEN }}
