--- a/.github/workflows/Selfuse.yml
+++ b/.github/workflows/Selfuse.yml
@@ -128,7 +128,7 @@ jobs:
         path: openwrt/bin
 
     - name: Upload Packags
-    - uses: actions/upload-artifact@main
+      uses: actions/upload-artifact@main
       with:
         name: Selfuse_IPK
         path: |
