--- a/.github/workflows/openwrt-x86-docker.yml
+++ b/.github/workflows/openwrt-x86-docker.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #
 
-name: OpenWrt_x86_Docker
+name: OpenWrt x86 Docker
 
 on:
   repository_dispatch:
