--- a/.github/workflows/openwrt-x86-original.yml
+++ b/.github/workflows/openwrt-x86-original.yml
@@ -105,7 +105,7 @@ jobs:
         [ -s DEVICE_NAME ] && echo "DEVICE_NAME=_$(cat DEVICE_NAME)" >> $GITHUB_ENV
         echo "FILE_DATE=$(date +"%Y-%m-%d %H%M")" >> $GITHUB_ENV
         echo "DATE=$(date "+%Y-%m-%d %H:%M:%S")" >> $GITHUB_ENV
-        echo "TAG_DATE=$(date +"%Y%m%d%H%M%S")" >> $GITHUB_ENV
+        echo "TAG_DATE=$(date +"%m%d%H%M%S")" >> $GITHUB_ENV
 
     - name: Check space usage
       if: (!cancelled())
