--- a/.github/workflows/openwrt-x86-original.yml
+++ b/.github/workflows/openwrt-x86-original.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #
 
-name: OpenWrt x86 original
+name: OpenWrt-x86-Original
 
 on:
   repository_dispatch:
@@ -23,9 +23,9 @@ env:
   REPO_URL: https://github.com/openwrt/openwrt
   REPO_BRANCH: openwrt-22.03
   FEEDS_CONF: config/original/feeds.conf.default
-  CONFIG_FILE: config/original/x86.config
-  DIY_P1_SH: config/original/diy-part1.sh
-  DIY_P2_SH: config/original/diy-x86.sh
+  CONFIG_FILE: config/original/x86/x86.config
+  DIY_P1_SH: config/original/x86/diy-part1.sh
+  DIY_P2_SH: config/original/x86/diy-x86.sh
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: false
   UPLOAD_COWTRANSFER: false
@@ -105,7 +105,7 @@ jobs:
         [ -s DEVICE_NAME ] && echo "DEVICE_NAME=_$(cat DEVICE_NAME)" >> $GITHUB_ENV
         echo "FILE_DATE=$(date +"%Y-%m-%d %H%M")" >> $GITHUB_ENV
         echo "DATE=$(date "+%Y-%m-%d %H:%M:%S")" >> $GITHUB_ENV
-        echo "TAG_DATE=$(date +"%m%d%H%M%S")" >> $GITHUB_ENV
+        echo "TAG_DATE=$(date +"%m%d-%H%M%S")" >> $GITHUB_ENV
 
     - name: Check space usage
       if: (!cancelled())
