--- a/.github/workflows/openwrt-x86-original.yml
+++ b/.github/workflows/openwrt-x86-original.yml
@@ -145,7 +145,7 @@ jobs:
     - name: Upload OpenWrt Firmware to Release
       uses: ncipollo/release-action@v1
       with:
-        name: OpenWrt x86 Original ${{ env.PRODUCT_NAME }}${{ env.DATE }}
+        name: OpenWrt-x86-Original ${{ env.PRODUCT_NAME }}${{ env.DATE }}
         tag: ${{ env.TAG_DATE }}
         artifacts: ${{ env.FIRMWARE }}/*
         allowUpdates: true
