--- a/.github/workflows/openwrt-armv8.yml
+++ b/.github/workflows/openwrt-armv8.yml
@@ -22,10 +22,10 @@ on:
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
-  FEEDS_CONF: config/lean/feeds.conf.default
-  CONFIG_FILE: config/lean/armv8/armv8.config
-  DIY_P1_SH: config/lean/armv8/diy-part1.sh
-  DIY_P2_SH: config/lean/armv8/diy-armv8.sh
+  FEEDS_CONF: lede/feeds.conf.default
+  CONFIG_FILE: lede/armv8.config
+  DIY_P1_SH: lede/armv8/diy-part1.sh
+  DIY_P2_SH: lede/armv8/diy-armv8.sh
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: false
   UPLOAD_COWTRANSFER: false
