--- a/.github/workflows/openwrt-x86-docker.yml
+++ b/.github/workflows/openwrt-x86-docker.yml
@@ -22,10 +22,10 @@ on:
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
-  FEEDS_CONF: config/lean/feeds.conf.default
-  CONFIG_FILE: config/lean/x86/x86-docker.config
-  DIY_P1_SH: config/lean/x86/diy-part1.sh
-  DIY_P2_SH: config/lean/x86/diy-x86.sh
+  FEEDS_CONF: lede/feeds.conf.default
+  CONFIG_FILE: lede/x86-docker.config
+  DIY_P1_SH: lede/diy-part1.sh
+  DIY_P2_SH: lede/diy-x86.sh
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: false
   UPLOAD_COWTRANSFER: false
